[gd_scene load_steps=6 format=3 uid="uid://bm5a6e4g7cfmh"]

[ext_resource type="Script" path="res://Scripts/Follow Turret Playground Controller.gd" id="1_wuv5a"]
[ext_resource type="PackedScene" uid="uid://dji4oady06ewt" path="res://Prefabs/Playground/Element/room.tscn" id="2_xjhr7"]
[ext_resource type="PackedScene" uid="uid://bub5hitbx6yi1" path="res://Prefabs/Playground/Element/Follow Turret.tscn" id="3_v7nja"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lwnot"]
size = Vector3(4, 1, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_o46ku"]
size = Vector3(4, 1, 0.5)

[node name="Follow Turret Playground" type="Node3D"]
script = ExtResource("1_wuv5a")

[node name="Room" parent="." instance=ExtResource("2_xjhr7")]

[node name="Follow Turret" parent="." instance=ExtResource("3_v7nja")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -4.37114e-08, 0, 0, 0)

[node name="Enter Area3D" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enter Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.521, 6.75)
shape = SubResource("BoxShape3D_lwnot")

[node name="Exit Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Exit Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.5, 7.25)
shape = SubResource("BoxShape3D_o46ku")

[connection signal="area_entered" from="Enter Area3D" to="." method="_on_enter_area_3d_area_entered"]
[connection signal="body_entered" from="Enter Area3D" to="." method="_on_enter_area_3d_body_entered"]
[connection signal="area_entered" from="Exit Area3D" to="." method="_on_exit_area_3d_area_entered"]
[connection signal="body_entered" from="Exit Area3D" to="." method="_on_exit_area_3d_body_entered"]
